--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             <div class="about-col">
               <p style="padding-top: 1em;">
                 Certificado de aprobación ISO 9001:2008 al sistema de gestión de calidad.
+                <img src="assets/cirplastic/certificadoISO9001-2008.gif"/>
               </p>
             </div>
           </div>
@@ -235,8 +236,6 @@
       <div class="col-lg-12">
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">Todos</li>
-            <li data-filter=".filter-pharma">Farmacia</li>
-            <li data-filter=".filter-cosmetics">Cosmética</li>
             <li data-filter=".filter-comercial">Comercial</li>
             <li data-filter=".filter-industrial">Industrial</li>
             <li data-filter=".filter-moldes">Moldes</li>
@@ -390,6 +389,101 @@
 
       </div>
     </section><!-- End Portfolio Section -->
+
+    <!-- ======= Team Section ======= -->
+    <section id="team">
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h3>Equipo</h3>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="fade-up" data-aos-delay="100" style="background-color: white;">
+              <img src="assets/cirplastic/woman-1.png" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Montse</h4>
+                  <span>Chief Executive Officer</span>
+                  <div class="social">
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="fade-up" data-aos-delay="100" style="background-color: white;">
+              <img src="assets/cirplastic/person-3.png" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Pep</h4>
+                  <span>Chief Sales Officer</span>
+                  <div class="social">
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p>
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            </p>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="fade-up" data-aos-delay="100" style="background-color: white;">
+              <img src="assets/cirplastic/woman-1.png" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Ana</h4>
+                  <span>Chief Technology Officer</span>
+                  <div class="social">
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p>
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member" data-aos="fade-up" data-aos-delay="100" style="background-color: white;">
+              <img src="assets/cirplastic/person-3.png" class="img-fluid" alt="">
+              <div class="member-info">
+                <div class="member-info-content">
+                  <h4>Lluis</h4>
+                  <span>Chief Product Officer</span>
+                  <div class="social">
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <p>
+              Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium.
+            </p>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="section-bg">
